testdata/baselines/reference/submodule/conformance/recursiveTypeReferences2.errors.txt
bug39372.js(24,12): error TS2552: Cannot find name 'XMLObject'. Did you mean 'Object'?


==== bug39372.js (1 errors) ====
    /** @typedef {ReadonlyArray<Json>} JsonArray */
    /** @typedef {{ readonly [key: string]: Json }} JsonRecord */
    /** @typedef {boolean | number | string | null | JsonRecord | JsonArray | readonly []} Json */
    
    /**
     * @template T
     * @typedef {{
      $A: {
        [K in keyof T]?: XMLObject<T[K]>[]
      },
      $O: {
        [K in keyof T]?: {
          $$?: Record<string, string>
        } & (T[K] extends string ? {$:string} : XMLObject<T[K]>)
      },
      $$?: Record<string, string>,
      } & {
      [K in keyof T]?: (
        T[K] extends string ? string
          : XMLObject<T[K]>
      )
    }} XMLObject<T> */
    
    /** @type {XMLObject<{foo:string}>} */
               ~~~~~~~~~
!!! error TS2552: Cannot find name 'XMLObject'. Did you mean 'Object'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Object' is declared here.
    const p = {};
    